--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,13 @@
-body {
-	background-color: white;
+.grid {
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+}
+
+.main-text {
+	grid-column: 1 / 5;
+}
+
+.main-image {
+	grid-column-start: 5;
+	grid-column-end: 12;	
 }
