Se implemento la clase grid-main-area.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,13 +1,33 @@
+img {
+	max-width: 100%;
+}
+
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 }
 
 .main-text {
-	grid-column: 1 / 5;
+	grid-area: title;
 }
 
 .main-image {
-	grid-column-start: 5;
-	grid-column-end: 12;	
+	grid-area: image;	
+}
+
+.grid-main-area {
+	display: grid;
+	grid-template-columns: repeat(9, 1fr);
+	grid-template-areas: 
+		"title title title title title title title title title"
+		"image image image image image image image image image";
+}
+
+@media (min-width: 960px) {
+	.grid-main-area {
+		display: grid;
+		grid-template-columns: repeat(9, 1fr);
+		grid-template-areas: 
+			". title title image image image image image .";
+	}
 }
