--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,9 @@
+@import "./modules/_variables.scss";
+
+body {
+	background-color: $primary-blue;
+}
+
 img {
 	max-width: 100%;
 }
@@ -23,11 +29,21 @@ img {
 		"image image image image image image image image image";
 }
 
+.container {
+	grid-column: span 12;
+	padding: $big-padding;
+}
+
 @media (min-width: 960px) {
+
+	.container {
+		grid-column: 2 / 12;
+	}
+
 	.grid-main-area {
 		display: grid;
 		grid-template-columns: repeat(9, 1fr);
 		grid-template-areas: 
-			". title title image image image image image .";
+			"title title title image image image image image image";
 	}
 }
