--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,25 @@ img {
 	max-width: 100%;
 }
 
+figure {
+	position: relative;
+	max-height: 100%;
+	margin: 0px;
+	figcaption {
+		padding: $large-padding;
+		font-weight: bold;
+		text-transform: uppercase;
+		font-size: 2em;
+		position: absolute;
+		width: auto;
+		bottom: 0px;
+		left: 10px;
+		z-index: 10px;
+		@include text-center;
+		color: $blue-grey;
+	}
+}
+
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
