--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -1,16 +1,18 @@
 // Colors
 
-$primary-blue: #1d92fa;
-$second-blue: #69b6f8;
-$blue-strong: #024681;
-$blue-grey: #4977a6;
-$purple: #5c4474;
+$red: #FC4349;
+$grey: #D7DADB;
+$blue: #2C3E50;
+$light-blue: #6DBCDB;
+$rose: #b76e79;
+$white: #fff;
+$black: #000;
 
 // Fonts
 
 $small: 16px;
 $medium: 20px;
-$big: 48px;
+$big: 36px;
 
 // paddings
 
