--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -65,6 +65,7 @@ figure {
 	display: grid;
 	grid-template-columns: repeat(9, 1fr);
 	margin-top: $big-margin-top;
+	margin-bottom: $big-margin-top;
 	grid-template-areas:
 		"title title title title title title title title title"
 		"image image image image image image image image image";
@@ -89,6 +90,18 @@ figure {
 .container {
 	grid-column: span 12;
 	padding: $big-padding;
+}
+
+.cover {
+	@include absolute-cover;
+	min-width: 500px;
+	background-size: cover;
+	background-position: center;
+
+	&.parallax {
+		background-attachment: fixed;
+		background-image: url(/../public/images/1.jpg);
+	}
 }
 
 @media (min-width: 960px) {
