--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,6 +21,10 @@ figure {
 	}
 }
 
+.full-height {
+	min-height: 100vh;
+}
+
 .btn {
 	padding: $large-padding;
 	position: relative;
@@ -59,16 +63,8 @@ figure {
 		"title title title title title title title title title"
 		"image image image image image image image image image";
 	.text {
-		font-weight: 200;
 		grid-area: title;
-		font-size: 1.2em;
-		line-height: 1.5em;
-		h1 {
-			font-weight: inherit;
-			font-size: $big;
-			letter-spacing: 0.3em;
-			line-height: 1.5em;
-		}
+		@include main-text;
 	}
 
 	.image {
@@ -105,6 +101,37 @@ figure {
 				font-size: 0.5em;
 				font-weight: 200;
 				margin-top: 6px;
+			}
+		}
+	}
+}
+
+.mission {
+	align-items: center;
+	.container {
+		@include main-text;
+		font-size: 1.1em;
+		figure {
+			float: right;
+			margin-left: 20px;
+		}
+
+		p {
+			line-height: 2em;
+			&:nth-of-type(1)
+			{
+				margin-bottom: 3em;
+				position: relative;
+
+				&::after {
+					content: '';
+					background-color: $blue;
+					position: absolute;
+					bottom: -1.5em;
+					height: 5px;
+					width: 70%;
+					z-index: -1;
+				}
 			}
 		}
 	}
