--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -137,6 +137,22 @@ figure {
 	}
 }
 
+.social {
+	margin-top: $big-margin-top;
+	margin-bottom: $big-margin-top;
+	@include text-center;
+	p.title {
+		font-weight: 200;
+		font-size: 2.5em;
+	}
+
+	a {
+		display: block;
+		max-width: 150px;
+		margin: 1em auto;
+	}
+}
+
 @media (min-width: 960px) {
 
 	.container {
@@ -149,4 +165,17 @@ figure {
 		grid-template-areas:
 			"title title title image image image image image image";
 	}
+
+	.social {
+		a {
+			display: inline-block;
+			margin-top: 0px;
+			margin-right: 90px;
+
+			&:last-of-type {
+				margin-right: 0px;
+			}
+		}
+	}
+
 }
