--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -106,6 +106,17 @@ figure {
 	}
 }
 
+.slider {
+	header {
+		background-color: $blue;
+		color: $white;
+		padding: $large-padding;
+		h2 {
+			margin: 0px;
+		}
+	}
+}
+
 .mission {
 	align-items: center;
 	.container {
@@ -164,6 +175,10 @@ figure {
 		grid-template-columns: repeat(9, 1fr);
 		grid-template-areas:
 			"title title title image image image image image image";
+	}
+
+	.slider {
+		align-items: center;
 	}
 
 	.social {
