--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -118,6 +118,20 @@ figure {
 		h2 {
 			margin: 0px;
 		}
+		.separator {
+			text-align: right;
+			padding-right: 150px;
+			position: relative;
+			&::after {
+				position: absolute;
+				content: '';
+				height: 3px;
+				width: 140px;
+				background-color: $white;
+				top: 0.7em;
+				right: 0px;
+			}
+		}
 	}
 }
 
