--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -107,6 +107,12 @@ figure {
 }
 
 .slider {
+	.image {
+		min-height: 100vh;
+		display: flex;
+		align-items: center;
+	}
+
 	header {
 		background-color: $blue;
 		color: $white;
@@ -115,6 +121,8 @@ figure {
 		width: 90%;
 		box-sizing: border-box;
 		margin: 0 auto;
+		z-index: 10;
+		position: relative;
 		h2 {
 			margin: 0px;
 		}
@@ -132,6 +140,21 @@ figure {
 				right: 0px;
 			}
 		}
+	}
+}
+
+#slider-text-content {
+	@include transition;
+	&.hide {
+		opacity: 0;
+		transform: translateX(100px);
+	}
+}
+
+#slider-image {
+	@include transition;
+	&.hide {
+		opacity: 0;
 	}
 }
 
