--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -210,6 +210,12 @@ figure {
 	}
 }
 
+#mapa {
+	width: 100%;
+	min-height: 600px;
+	margin-top: $big-margin-top;
+}
+
 .social {
 	margin-top: $big-margin-top;
 	margin-bottom: $big-margin-top;
