--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -54,6 +54,29 @@ figure {
 	grid-template-columns: repeat(12, 1fr);
 }
 
+.menu-screen {
+	background-color: white;
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	z-index: 100;
+	@include transition;
+	@include center-vertical-horizontal;
+	a {
+		display: block;
+		text-decoration: none;
+		@include text-center;
+		position: relative;
+		margin-top: 1em;
+		&:first-of-type { margin-top: 0;}
+		.main {
+			display: block;
+			font-size: 2em;
+			color: $light-blue;
+		}
+	}
+}
+
 .grid-main-area {
 	display: grid;
 	grid-template-columns: repeat(9, 1fr);
