--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -54,14 +54,42 @@ figure {
 	grid-template-columns: repeat(12, 1fr);
 }
 
+.menu {
+	position: fixed;
+	top: 2em;
+	right: 2em;
+	border-radius: 50%;
+	height: 50px;
+	width: 50px;
+	border: solid 1px $blue;
+	@include center-vertical-horizontal;
+	background-color: white;
+	@include transition;
+	transition-duration: 0.15s;
+	cursor: pointer;
+	&:hover {
+		background-color: $light-blue;
+	}
+
+	img {
+		height: 30px;
+	}
+}
+
 .menu-screen {
 	background-color: white;
 	height: 100vh;
 	width: 100vw;
 	position: fixed;
 	z-index: 100;
+	top: -101vh;
 	@include transition;
 	@include center-vertical-horizontal;
+
+	&.active {
+		top: 0;
+	}
+
 	a {
 		display: block;
 		text-decoration: none;
